--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/custom.css">
 </head>
 <body>
@@ -43,6 +44,134 @@
   			</div>
   		</div>
 	</div>
+
+	<div class="container repos">
+		<div class="row text-center">
+			<h1>Repositórios</h1>
+		</div>
+
+		<div class="row">
+			<div class="col-md-3">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<b>Vagas</b>
+						<br><br>
+						<p>Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas</p>
+					</div>
+					<div class="panel-footer">
+						<i class="fa fa-star" aria-hidden="true"></i> 666
+					</div>
+				</div>
+			</div>	
+			<div class="col-md-3">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<b>Vagas</b>
+						<br><br>
+						<p>Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas</p>
+					</div>
+					<div class="panel-footer">
+						<i class="fa fa-star" aria-hidden="true"></i> 666
+					</div>
+				</div>
+			</div>	
+			<div class="col-md-3">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<b>Vagas</b>
+						<br><br>
+						<p>Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas</p>
+					</div>
+					<div class="panel-footer">
+						<i class="fa fa-star" aria-hidden="true"></i> 666
+					</div>
+				</div>
+			</div>	
+			<div class="col-md-3">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<b>Vagas</b>
+						<br><br>
+						<p>Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas</p>
+					</div>
+					<div class="panel-footer">
+						<i class="fa fa-star" aria-hidden="true"></i> 666
+					</div>
+				</div>
+			</div>	
+			<div class="col-md-3">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<b>Vagas</b>
+						<br><br>
+						<p>Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas</p>
+					</div>
+					<div class="panel-footer">
+						<i class="fa fa-star" aria-hidden="true"></i> 666
+					</div>
+				</div>
+			</div>	
+			<div class="col-md-3">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<b>Vagas</b>
+						<br><br>
+						<p>Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas</p>
+					</div>
+					<div class="panel-footer">
+						<i class="fa fa-star" aria-hidden="true"></i> 666
+					</div>
+				</div>
+			</div>	
+			<div class="col-md-3">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<b>Vagas</b>
+						<br><br>
+						<p>Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas</p>
+					</div>
+					<div class="panel-footer">
+						<i class="fa fa-star" aria-hidden="true"></i> 666
+					</div>
+				</div>
+			</div>	
+			<div class="col-md-3">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<b>Vagas</b>
+						<br><br>
+						<p>Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas Vagas</p>
+					</div>
+					<div class="panel-footer">
+						<i class="fa fa-star" aria-hidden="true"></i> 666
+					</div>
+				</div>
+			</div>			
+		</div>
+	</div>
+
+	<div class="container text-center home">
+		<a href="#" class="btn btn-lg btn-success">Ver Mais</a>
+	</div>
+
+	<div class="container-fluid newsletter text-center">
+		<h2>Newsletter</h2>
+
+		<p>Fique por dentro da comunidade BackEnd Brasil e receba novidades no seu e-mail.</p>
+
+		<div class="form-news">
+			<input type="text" class="form-control" placeholder="Digite seu e-mail...">
+			<a href="#" class="btn btn-lg btn-info">Cadastrar E-mail</a>
+		</div>
+	</div>
+	
+	<footer>	    
+	    <div class="footer-bottom">
+	        <div class="container">
+	            <p class="pull-left"> MIT © BackEnd Brasil 2017. </p>
+	        </div>
+	    </div>
+	</footer>
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
